fix overflow

--- a/styles/_quiz.scss
+++ b/styles/_quiz.scss
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   padding: 0;
+  height: 100vh;
   overflow: hidden;
 
   p{
@@ -9,7 +10,8 @@ body{
   }
 
   .mainQuiz{
-    height: 100vh;
+    height: 100%;
+    overflow: auto;
     width: 100%;
     background-size: 100%;
     background-attachment: fixed;
@@ -22,6 +24,7 @@ body{
   }
 
   #index{
+    height: 100%;
     .headerLine{
       height: 17px;
       background-color: #ffffff;
